# Sky.pro-bank_operations_widget

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: usage_examples.md
htmlcov/: index.html
logs/: log.txt
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  transactions_loading.py  utils.py  widget.py
tests/: conftest.py  masks_test.py  processing_test.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_transactions_loading.py  test_utils.py  test_widget.py  widget_test.py  widget_tests.py
